Opened 4 years ago

Closed 6 months ago

#16708 closed bug (fixed)

THR: Test FAILED - conformance/interfaces/pthread_rwlock_rdlock/4-1.test

Reported by: cocobean Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: System/POSIX Version: R1/Development
Keywords: POSIX, pthreads, pthread_rwlock_rdlock Cc:
Blocked By: Blocking:
Platform: All

Description

Test pthread_rwlock_rdlock(pthread_rwlock_t * rwlock)

If a signal is delivered to a thread waiting for a read-write lock for reading, upon return from the signal handler the thread resumes waiting for the read-write lock for reading as if it was not interrupted.

Steps:

1. main thread  create read-write lock 'rwlock', and lock it for writing
2. main thread create a thread sig_thread, the thread is set to handle SIGUSR1
3. sig_thread try to lock 'rwlock' for reading but will block
4. main thread sends SIGUSR1 to sig_thread via pthread_kill
5. test that thread handler is called 
6. check that when thread handler returns, sig_thread resumes blocking for rwlock
7. main thread unlock 'rwlock', sig_thread should get the lock

Ref: https://github.com/haiku/open_posix_testsuite/blob/from_haiku_trunk/conformance/interfaces/pthread_rwlock_rdlock/4-1.c

Expected result: Test passed

Actual Result: Test failed. sig_thread: Error at pthread_rwlock_rdlock(). Error code=2147483638

Tested on: Haiku hrev54815 x86 with Open POSIX Test Suite 1.5.2

Change History (2)

comment:1 by cocobean, 2 years ago

Last edited 2 years ago by cocobean (previous) (diff)

comment:2 by waddlesplash, 6 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev58065 +beta5.

Note: See TracTickets for help on using tickets.