pthread: Make rwlocks keep waiting on EINTR.

As specified by POSIX.

Fixes #16708.